--- a/static/play.html
+++ b/static/play.html
@@ -7,7 +7,7 @@
 <body>
 
 <button onclick="play()">Play</button>
-<button onclick="pause()">Pause</button>
+<button onclick="resume()">Pause</button>
 
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -18,7 +18,7 @@
         $.ajax('/play');
     };
     pause = function() {
-        $.ajax('/pause');
+        $.ajax('/resume');
     };
 </script>
 </body>
