--- a/static/play.html
+++ b/static/play.html
@@ -2,32 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Play Webpage </title>
+    <title> DJ </title>
+    <link rel="stylesheet" href="css/foundation.min.css" />
+    <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
-
-<button onclick="resume()">Resume</button>
-<button onclick="pause()">Pause</button>
-
+<div id="app">
+    <button onclick="resume()">Resume</button>
+    <button onclick="pause()">Pause</button>
+    <div class="row expanded background">
+        <div class="small-12 small-centered column">
+            <ul>
+                <li v-for="song in queue" id="queue">
+                    {{song.name}}
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<script>
-    resume = function() {
-        song = 'spotify:track:4iV5W9uYEdYUVa79Axb7Rh';
-        $.ajax('/add_song?song=' + song)
-    };
-    pause = function() {
-        $.ajax('/pause')
-    };
+  crossorigin="anonymous">
 </script>
+<script type="text/javascript" src="js/vue.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
-    socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
-    });
-</script>
+<script type="text/javascript" src="js/foundation.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
