--- a/static/play.html
+++ b/static/play.html
@@ -8,17 +8,18 @@
 </head>
 <body>
 <div id="app">
-    <button onclick="resume()">Resume</button>
-    <button onclick="pause()">Pause</button>
-    <div class="row expanded background">
-        <div class="small-12 small-centered column">
-            <ul>
-                <li v-for="song in queue" id="queue">
-                    {{song.name}}
-                </li>
-            </ul>
-        </div>
+<button onclick="resume()">Resume</button>
+<button onclick="pause()">Pause</button>
+<input v-model.trim="search" @keyup.some_key="change" placeholder="Search">
+<div class="row expanded background">
+    <div class="small-12 small-centered column">
+        <ul>
+            <li v-for="song in queue" id="queue">
+                {{song.name}}
+            </li>
+        </ul>
     </div>
+</div>
 </div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -26,7 +27,7 @@
   crossorigin="anonymous">
 </script>
 <script type="text/javascript" src="js/vue.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" src="js/socket.io.min.js"></script>
 <script type="text/javascript" src="js/foundation.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
