--- a/static/play.html
+++ b/static/play.html
@@ -6,6 +6,8 @@
 	<title>DJ Music</title>
   <link rel="stylesheet" type="text/css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="css/boilerplate.css" rel="stylesheet" type="text/css">
 </head>
 <body bgcolor="#222326">
 	<div id="app">
