--- a/static/play.html
+++ b/static/play.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
 	<link href="css/boilerplate.css" rel="stylesheet" type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body bgcolor="#222326">
 	<div id="app">
@@ -79,6 +79,7 @@
 	<script type="text/javascript" src="js/vue.js"></script>
 	<script type="text/javascript" src="js/socket.io.min.js"></script>
 	<script type="text/javascript" src="js/foundation.min.js"></script>
+	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
