--- a/static/404.html
+++ b/static/404.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-<p>Hey buddy. The page you're looking for does not exist.</p>
+<p>Hey buddy. The page you're looking for does not exist. (404)</p>
 
 {% endblock}
