--- a/static/play.html
+++ b/static/play.html
@@ -14,13 +14,13 @@
 		<div style="text-align: center; margin-top: 7px;"><input type="search" v-model="search" @keyup.some_key="change" placeholder="Search for Songs to Add" class="query"></div>
 		 <div class="current">
   	<div class="title" style="margin-top: 0px; margin-bottom: 5px;">Playing Now:</div>
-  	<img class="artwork" src="https://images.genius.com/ccc87d4afb4e2d957a8c3c2700390bc1.1000x1000x1.jpg" alt="artwork"/>
-    <div class="song_name">I'm the One</div>
-    <div class="song_info" style="margin-top: 3px;">DJ Khaled ft. Justin Bieber, Quavo, Chance the Rapper, &amp; Lil Wayne - Grateful</div>
+  	<img class="artwork" v-bind:src="currently_playing.album_uri" alt="artwork"/>
+    <div class="song_name">{{currently_playing.name}}</div>
+    <div class="song_info" style="margin-top: 3px;">{{currently_playing.artist}} - {{currently_playing.album_name}}</div>
     <div style="width: 100%; margin-top: 4px;">
-      <div class="current_time">1:23</div>
-      <div class="progcontainer"><progress value="23" max="100" style="width: 49%;"></progress></div>
-      <div class="total_time">3:49</div>
+      <div class="current_time">{{currently_playing.curr_time}}</div>
+      <div class="progcontainer"><progress v-bind:value="currently_playing.curr_time" v-bind:max="currently_playing.duration / 1000" style="width: 49%;"></progress></div>
+      <div class="total_time">{{currently_playing.duration / 1000}}</div>
     </div>
   </div>
 	<div v-if="search.length == 0">
@@ -61,7 +61,9 @@
   	<img class="artwork" v-bind:src="song.album_uri" alt="artwork"/>
     <div class="song_name">{{song.name}}</div>
 		<!--> ADD IF ELSE HERE </-->
-    <img src="images/add.png" v-on:click="submit_song(song.track_id)" class="addition" alt="add"/>
+		<v-touch v-on:tap="submit_song(song.track_id)" >
+    	<img v-bind:id="'song' + index" src="images/add.png" class="addition" alt="add"/>
+		</v-touch>
 		<img src="images/delete.png" class="addition" alt="del"/>
     <div class="song_info" style="margin-top: 5px;">{{song.artist}} - {{song.album_name}}</div>
     <div style="margin-top: 5px;">
@@ -80,6 +82,7 @@
 	<script type="text/javascript" src="js/socket.io.min.js"></script>
 	<script type="text/javascript" src="js/foundation.min.js"></script>
 	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+	<script type="text/javascript" src="js/vue-touch.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
