favicon addition to all pages

--- a/frontend/play.html
+++ b/frontend/play.html
@@ -3,11 +3,22 @@
 	<head>
   <!-- #222326, #EB4533, #37393E -->
 	<meta charset="UTF-8">
-	<title>DJ Music</title>
+	<title>Auxilia - Group Music Sharing Platform</title>
   <link rel="stylesheet" type="text/css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="css/boilerplate.css" rel="stylesheet" type="text/css">
+     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="css/boilerplate.css" rel="stylesheet" type="text/css">
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fc2558">
+<meta name="msapplication-TileColor" content="#fc2558">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body bgcolor="#222326">
 	<div id="app">
