--- a/static/play.html
+++ b/static/play.html
@@ -14,13 +14,13 @@
 		<div style="text-align: center; margin-top: 7px;"><input type="search" v-model="search" @keyup.some_key="change" placeholder="Search for Songs to Add" class="query"></div>
 		 <div class="current">
   	<div class="title" style="margin-top: 0px; margin-bottom: 5px;">Playing Now:</div>
-  	<img class="artwork" v-bind:src="currently_playing.album_uri" alt="artwork"/>
-    <div class="song_name">{{currently_playing.name}}</div>
-    <div class="song_info" style="margin-top: 3px;">{{currently_playing.artist}} - {{currently_playing.album_name}}</div>
+  	<img class="artwork" v-bind:src="curr_album_uri" alt="artwork"/>
+    <div class="song_name">{{curr_name}}</div>
+    <div class="song_info" style="margin-top: 3px;">{{curr_artist}} - {{curr_album_name}}</div>
     <div style="width: 100%; margin-top: 4px;">
-      <div class="current_time">{{currently_playing.curr_time}}</div>
-      <div class="progcontainer"><progress v-bind:value="currently_playing.curr_time" v-bind:max="currently_playing.duration / 1000" style="width: 49%;"></progress></div>
-      <div class="total_time">{{currently_playing.duration / 1000}}</div>
+      <div class="current_time">{{curr_time_display}}</div>
+      <div class="progcontainer"><progress v-bind:value="curr_time" v-bind:max="curr_duration / 1000" style="width: 49%;"></progress></div>
+      <div class="total_time">{{curr_duration_display}}</div>
     </div>
   </div>
 	<div v-if="search.length == 0">
@@ -54,7 +54,7 @@
 			<div v-else>
 				<img id="downvote" class="dvote" src="static/images/down.png" alt="Down Vote" onmouseover="this.style.cursor='pointer'" v-on:click="downvote(index)" />	
 			</div>
-        <td><div class="duration">Duration: {{song.duration}} </div></td>
+        <td><div class="duration">Duration: {{format_duration(song.duration)}} </div></td>
      </tr>
     </table>
   </div>
@@ -73,7 +73,7 @@
 		<img src="static/images/delete.png" class="addition" alt="del"/>
     <div class="song_info" style="margin-top: 5px;">{{song.artist}} - {{song.album_name}}</div>
     <div style="margin-top: 5px;">
-      <div class="duration" style="margin-left: 0px;">Duration: {{song.duration}}</div>
+      <div class="duration" style="margin-left: 0px;">Duration: {{format_duration(song.duration)}}</div>
     </div>
   </div>
 	</div>
