--- a/static/admin.html
+++ b/static/admin.html
@@ -5,17 +5,17 @@
 	<meta charset="UTF-8">
 	<title>Auxilia - Group Music Sharing Platform</title>
   <link rel="stylesheet" type="text/css">
-	<link href="css/layout.css" rel="stylesheet" type="text/css">
+	<link href="/static/css/layout.css" rel="stylesheet" type="text/css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="css/boilerplate.css" rel="stylesheet" type="text/css">
-     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+   <link href="/static/css/boilerplate.css" rel="stylesheet" type="text/css">
+     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="css/boilerplate.css" rel="stylesheet" type="text/css">
-   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fc2558">
+   <link href="/static/css/boilerplate.css" rel="stylesheet" type="text/css">
+   <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+<link rel="manifest" href="/static/manifest.json">
+<link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#fc2558">
 <meta name="msapplication-TileColor" content="#fc2558">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
@@ -39,12 +39,12 @@
   </div>
   <div class="row" style="text-align: center;">
   	<div class="song_info" style="position: relative; top: 50%; transform: translateY(-70%);">
-    	# of Downloads to Remove Song:
+    	# of Downvotes to Remove Song:
       <input type="number" placeholder="15" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
     </div>
   </div>
 	</div>
-  <a class="nostyle" href="play.html"><div class="pointer" style="background-color: #FC2558; border-radius: 21px; height: 42px; width: 200px; color: #f2f2f2; font-size: 24px; text-align: center; line-height: 42px; margin: 0 auto; margin-top: 15px; bottom: 30%;">Go to Queue</div></a>
+  <a class="nostyle" href="/play"><div class="pointer" style="background-color: #FC2558; border-radius: 21px; height: 42px; width: 200px; color: #f2f2f2; font-size: 24px; text-align: center; line-height: 42px; margin: 0 auto; margin-top: 15px; bottom: 30%;">Go to Queue</div></a>
   </div>
 </body>
 </html>
