--- a/static/play.html
+++ b/static/play.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>DJ Music</title>
   <link rel="stylesheet" type="text/css">
-	<link href="static/css/layout.css" rel="stylesheet" type="text/css">
+	<link href="static/css/play.css" rel="stylesheet" type="text/css">
 	<link href="static/css/boilerplate.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 </head>
@@ -66,7 +66,6 @@
   <div class="row">
   	<img class="artwork" v-bind:src="song.album_uri" alt="artwork"/>
     <div class="song_name">{{song.name}}</div>
-		<!--> ADD IF ELSE HERE </-->
 		<v-touch v-on:tap="submit_song(song.track_id)" >
     	<img v-bind:id="'song' + index" src="static/images/add.png" class="addition" alt="add"/>
 		</v-touch>
