added static files for guaranteed handoff

--- a/static/play.html
+++ b/static/play.html
@@ -85,9 +85,9 @@
 	<script type="text/javascript" src="static/js/vue.js"></script>
 	<script type="text/javascript" src="static/js/socket.io.min.js"></script>
 	<script type="text/javascript" src="static/js/foundation.min.js"></script>
-	<script src="https://unpkg.com/axios@0.12.0/dist/axios.min.js"></script>
-	<script src="https://unpkg.com/lodash@4.13.1/lodash.min.js"></script>
-	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+	<script type="text/javascript" src="static/js/axios.min.js"></script>
+	<script type="text/javascript" src="static/js/lodash.min.js"></script>
+	<script type="text/javascript" src="static/js/hammer.js"></script>
 	<script type="text/javascript" src="static/js/vue-touch.min.js"></script>
 	<script type="text/javascript" src="static/js/app.js"></script>
 </body>
