working on admin options

--- a/static/admin.html
+++ b/static/admin.html
@@ -39,8 +39,14 @@
   </div>
   <div class="row" style="text-align: center;">
   	<div class="song_info" style="position: relative; top: 50%; transform: translateY(-70%);">
-    	# of Downvotes to Remove Song:
-      <input type="number" placeholder="15" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
+    	Number of downvotes to remove song:
+      <input type="number" placeholder="3" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
+    </div>
+  </div>
+  <div class="row" style="text-align: center;">
+  	<div class="song_info" style="position: relative; top: 50%; transform: translateY(-70%);">
+    	Max number of individual added songs at a time
+      <input type="number" placeholder="3" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
     </div>
   </div>
 	</div>
