--- a/static/play.html
+++ b/static/play.html
@@ -5,13 +5,15 @@
 	<meta charset="UTF-8">
 	<title>DJ Music</title>
   <link rel="stylesheet" type="text/css">
-	<link href="css/play.css" rel="stylesheet" type="text/css">
+	<link href="static/css/play.css" rel="stylesheet" type="text/css">
 	<link href="static/css/boilerplate.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body bgcolor="#222326">
 	<div id="app">
-  <div class="error">Oops! You've already entered this song in the queue. Try again later.</div>
+	<div v-if="show_error">
+  	<div class="error">{{error_message}}</div>
+	</div>
 		<div style="text-align: center; margin-top: 7px;"><input type="search" v-model="search" @keyup.some_key="change" placeholder="Search for Songs to Add" class="query"></div>
 		 <div class="current">
   	<div class="title" style="margin-top: 0px; margin-bottom: 5px;">Playing Now:</div>
