backend admin; thumbs work now

--- a/static/play.html
+++ b/static/play.html
@@ -3,7 +3,7 @@
 	<head>
   <!-- #222326, #EB4533, #37393E -->
 	<meta charset="UTF-8">
-	<title>DJ Music</title>
+	<title>Auxilia</title>
   <link rel="stylesheet" type="text/css">
 	<link href="static/css/play.css" rel="stylesheet" type="text/css">
 	<link href="static/css/boilerplate.css" rel="stylesheet" type="text/css">
