added downvote threshold

--- a/static/admin.html
+++ b/static/admin.html
@@ -39,8 +39,8 @@
   </div>
   <div class="row" style="text-align: center;">
   	<div class="song_info" style="position: relative; top: 50%; transform: translateY(-70%);">
-    	Number of downvotes to remove song:
-      <input type="number" v-model="max_downvotes" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
+    	How many more downvotes than upvotes to remove song:
+      <input type="number" v-model="votes_threshold" class="query" style="width: 22%; margin-left: 5px; text-align: center;">
     </div>
   </div>
   <div class="row" style="text-align: center;">
